<resources>
    <string name="app_name">SmartFuel</string>

    <string name="title_rec">DRIVING</string>
    <string name="title_stat">STATISTICS</string>
    <string name="title_shop">SHOP</string>
    <string name="title_acc">PROFILE</string>
    <string name="title_set">SETTINGS</string>

    <string name="rec_points">DRIVING POINTS</string>
    <string name="rec_total_dist">TOTAL DISTANCE</string>
    <string name="rec_percent"> Percent</string>
    <string name="rec_speed">Speed</string>
    <string name="rec_percent_symbol">%</string>
    <string name="rec_kmph">km/h</string>
    <string name="rec_mph">mph</string>
    <string name="rec_comment_1">to receive</string>
    <string name="rec_comment_2">1 point</string>
    <string name="rec_turn_gps_on">Turn on GPS</string>
    <string name="rec_no_gps_signal">Waiting for signal</string>
    <string name="rec_no_gps">No GPS</string>
    <string name="rec_no_data">No Data</string>

    <string name="stat_week">WEEK</string>
    <string name="stat_month">MONTH</string>
    <string name="stat_year">YEAR</string>
    <string name="stat_pos_km">Affirmative km</string>
    <string name="stat_neg_km">Negative km</string>
    <string name="stat_pos_mile">Affirmative mi</string>
    <string name="stat_neg_mile">Negative mi</string>
    <string name="profile_total_distance_km">KM</string>
    <string name="profile_total_distance_mile">MI</string>
    <string name="profile_current_points_text">POINTS</string>
    <string name="profile_success_rate_text">SUCCESS RATE</string>

    <string name="shop_product">PRODUCTS</string>
    <string name="shop_promo">EVENTS</string>
    <string name="shop_contest">CONTESTS</string>

    <string name="profile_oil">OIL</string>
    <string name="profile_service">SERVICE</string>
    <string name="profile_tyres">TIRES</string>
    <string name="profile_days">days</string>
    <string name="profile_total_points_text">all points</string>
    <string name="profile_last_sync_text">Last synchronization</string>
    <string name="profile_last_sync_before_text">before</string>
    <string name="profile_last_sync_hours">h</string>
    <string name="profile_last_sync_days">d</string>
    <string name="profile_refueling_count_text">Times refueled</string>
    <string name="profile_expired_points_text">expired points</string>

    <string name="intro_1">Drive</string>
    <string name="intro_1_comment">Drive along the world safely, since..</string>
    <string name="intro_2">Points</string>
    <string name="intro_2_comment">Earn points for driving safe.</string>
    <string name="intro_3">Reward</string>
    <string name="intro_3_comment">We reward you with cheaper refueling.</string>

    <string name="login_start">Let\'s start</string>
    <string name="login_comment">Login into your SmartFuel account</string>
    <string name="login_mail">E-mail</string>
    <string name="login_pass">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_forget">Forgotten?</string>
    <string name="login_no_acc">Don\'t have an SmartFuel account, yet?</string>
    <string name="login_reg">Register for Free</string>

    <string name="login_progress_title">Login</string>
    <string name="login_progress_msg">Attempting to login…</string>

    <string name="error_account_not_registered">Account doesn\'t exist.</string>
    <string name="error_incorrect_password">Incorrect password.</string>
    <string name="error_invalid_password">Invalid password.</string>
    <string name="error_invalid_email">Not a valid email.</string>
    <string name="error_field_required">Required field.</string>
    <string name="error_unexpected">Something unexpected has happened. Please, try it later.</string>
    <string name="title_activity_smart_fuel">SmartFuelActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="toolbar_rec">REC</string>
    <string name="toolbar_stop">STOP</string>

    <string name="notification_title">SmartFuel is recording your activity</string>

    <string name="set_language">Language</string>
    <string name="set_audio">Audio</string>
    <string name="set_units">Units</string>
    <string name="set_about">About</string>

    <string name="set_automatic">Automatic</string>

    <string name="unit_meter">m</string>
    <string name="unit_kilometer">km</string>
    <string name="unit_mile">mi</string>
    <string name="unit_feet">ft</string>
</resources>
