<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/intro_bottom_padding"
              android:paddingTop="@dimen/intro_bottom_padding">

    <sk.codekitchen.smartfuel.ui.GUI.LightTextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_start"
        android:textColor="@color/MAIN"
        android:textSize="@dimen/login_text"
        android:gravity="center"/>

    <sk.codekitchen.smartfuel.ui.GUI.LightTextView
        android:id="@+id/intro_comment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_comment"
        android:textColor="@color/WHITE"
        android:textSize="@dimen/title_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/intro_margins"
        android:layout_marginLeft="@dimen/intro_margins"
        android:layout_marginRight="@dimen/intro_margins"
        android:gravity="center"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_size"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/intro_margins"
            android:layout_marginRight="@dimen/intro_margins"
            android:layout_marginBottom="@dimen/login_data_margin"
            android:weightSum="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@mipmap/profile"
                android:layout_weight="0.1"
                android:alpha="0.5"/>

            <sk.codekitchen.smartfuel.ui.GUI.EditLightTextView
                android:id="@+id/login_mail"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/GRAY"
                android:textColor="@color/WHITE"
                android:background="@color/TRANSPARENT"
                android:editable="false"
                android:layout_marginLeft="@dimen/intro_margins"
                android:layout_marginRight="@dimen/intro_margins"
                android:hint="@string/login_mail"
                android:layout_weight="0.9"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_marginLeft="@dimen/intro_margins"
            android:layout_marginRight="@dimen/intro_margins"
            android:layout_height="1dp"
            android:background="@color/GRAY">
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_size"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/intro_margins"
            android:layout_marginRight="@dimen/intro_margins"
            android:layout_marginTop="@dimen/login_data_margin"
            android:weightSum="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@mipmap/edit"
                android:layout_weight="0.1"
                android:alpha="0.5"/>

            <sk.codekitchen.smartfuel.ui.GUI.EditLightTextView
                android:id="@+id/login_pass"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:inputType="textPassword"
                android:textColorHint="@color/GRAY"
                android:textColor="@color/WHITE"
                android:background="@color/TRANSPARENT"
                android:layout_marginLeft="@dimen/intro_margins"
                android:layout_marginRight="@dimen/intro_margins"
                android:hint="@string/login_pass"
                android:layout_weight="0.65"/>

            <sk.codekitchen.smartfuel.ui.GUI.LightTextView
                android:clickable="true"
                android:id="@+id/login_forgotten"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_forget"
                android:textColor="@color/MAIN"
                android:layout_weight="0.25"
                android:gravity="right"/>

        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:layout_marginTop="@dimen/intro_margins"
            android:layout_marginLeft="@dimen/intro_margins"
            android:layout_marginRight="@dimen/intro_margins"
            android:background="@color/MAIN"
            />

        <sk.codekitchen.smartfuel.ui.GUI.LightTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_no_acc"
            android:textColor="@color/WHITE"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/intro_margins"
            android:layout_marginLeft="@dimen/intro_margins"
            android:layout_marginRight="@dimen/intro_margins"
            android:layout_marginBottom="@dimen/intro_dot_margin"
            android:gravity="center"
            />

        <sk.codekitchen.smartfuel.ui.GUI.LightTextView
            android:clickable="true"
            android:id="@+id/login_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_reg"
            android:textColor="@color/MAIN"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/intro_margins"
            android:layout_marginRight="@dimen/intro_margins"
            android:layout_marginTop="@dimen/intro_dot_margin"
            android:gravity="center"
            />

    </LinearLayout>

</LinearLayout>