<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.StatisticsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:orientation="vertical"
    android:id="@+id/stat_layout"
    android:weightSum="1"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/stat_intervals"
        android:weightSum="1"
        android:layout_weight="0.1"
        >

        <sk.codekitchen.smartfuel.ui.views.LightTextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearance"
            android:text="@string/stat_week"
            android:layout_weight="0.33"
            android:id="@+id/stat_week"
            android:gravity="center"
            android:background="@drawable/border_bottom_selected_good"
            android:clickable="true"
            android:textColor="@color/MAIN"
            />

        <sk.codekitchen.smartfuel.ui.views.LightTextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearance"
            android:text="@string/stat_month"
            android:layout_weight="0.34"
            android:id="@+id/stat_month"
            android:gravity="center"
            android:background="@drawable/border_bottom"
            android:clickable="true"
            android:textColor="@color/LIGHT_GRAY"
            />

        <sk.codekitchen.smartfuel.ui.views.LightTextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearance"
            android:text="@string/stat_year"
            android:layout_weight="0.33"
            android:id="@+id/stat_year"
            android:gravity="center"
            android:background="@drawable/border_bottom"
            android:clickable="true"
            android:textColor="@color/LIGHT_GRAY"
            />

    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/stat_switch"
        android:weightSum="1"
        android:background="@drawable/round_border_box"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0.1"
        android:padding="5dp"
        android:clickable="true"
        >

        <sk.codekitchen.smartfuel.ui.views.LightTextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/btn_positive"
            android:textAppearance="?android:attr/textAppearance"
            android:text="@string/stat_pos_km"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/WHITE"
            android:background="@drawable/round_highlight_box_left"
            android:layout_weight="0.5"
            />

        <sk.codekitchen.smartfuel.ui.views.LightTextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/btn_negative"
            android:textAppearance="?android:attr/textAppearance"
            android:text="@string/stat_neg_km"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/LIGHT_GRAY"
            android:background="@drawable/round_transparent"
            android:layout_weight="0.5"
            android:gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:gravity="center">


        <com.db.chart.view.LineChartView
            android:id="@+id/line_chart"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>

        <sk.codekitchen.smartfuel.ui.views.LightTextView
            android:id="@+id/chart_dot"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:minWidth="25dp"
            android:textColor="@color/LIGHT_GRAY"
            android:text=" "
            android:visibility="invisible"
            android:gravity="center"
            android:textSize="12dp"
            android:padding="5dp"
            />


    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:gravity="center"
        android:layout_weight="0.2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.33"
            android:gravity="center"
            android:background="@drawable/border_top_right">

            <sk.codekitchen.smartfuel.ui.views.SemiboldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="1567"
                android:id="@+id/stat_distance"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/WHITE"
                />

            <sk.codekitchen.smartfuel.ui.views.LightTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/stat_distance_unit"
                android:text="@string/profile_total_distance_km"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/LIGHT_GRAY"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.34"
            android:gravity="center"
            android:background="@drawable/border_top">

            <sk.codekitchen.smartfuel.ui.views.SemiboldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="56"
                android:id="@+id/stat_points"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/WHITE"
                />

            <sk.codekitchen.smartfuel.ui.views.LightTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/profile_current_points_text"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/LIGHT_GRAY"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.33"
            android:gravity="center"
            android:background="@drawable/border_top_left">

            <sk.codekitchen.smartfuel.ui.views.SemiboldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="73%"
                android:id="@+id/stat_success"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/WHITE"
                />

            <sk.codekitchen.smartfuel.ui.views.LightTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/profile_success_rate_text"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/LIGHT_GRAY"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

